--- a/movie.css
+++ b/movie.css
@@ -1,81 +1,115 @@
-html{
-    height: 100%;
-  }
-  
-  body{
-    font-family: "Arial", Helvetica, sans-serif;
-    position: relative;
-  }
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
-  #container{
-    text-align: center;
-    position: relative;
-    height: 100%;
-  }
-  
-  #movies_booked, #form{
-    display: inline-block;
-    width: 40%;
-    height: 100%;
-    margin: 0 auto;
-    vertical-align:text-top;
-  }
-  
-  fieldset, #movies_booked{
-    border:1px solid #AED0EA;
-    border-radius:8px;
-    box-shadow:0 0 10px #D7EBF9;
-  }
-  
-  legend, #disount_title{
-    color: #2779AA;
-    font-size: 120%;
-    text-align: center;
-    background-color: white;
-  }
-  
-  p{
-    overflow: hidden;
-  }
-  
-  label{
-    width: 50%;
-    text-align: right;
-    float: left;
-    clear: both;
-    color: #2779AA;
-  }
-  
-  p input, p select{
-    width: 40%;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    float: left;
-    margin-left: 5%;
-    margin-right: 5%;
-    color: #2779AA;
-  }
-  
-  #theaters, #total_price, #movies_list, li, #perTicketPrice, #note{
-    color: #2779AA;
-  }
-  
-  p span, li{
-    text-align: left;
-  }
-  
-  #submit_wrapper{
-    text-align: center;
-  }
-  
-  #submit{
-    font-size: 13px;
-  }
-  
-  #discount, #perTicketPrice{
-    text-align: left;
-  }
-  
-  #dateNote{
-    font-size: 9px;
-  }
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #242333;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  font-family: 'Lato', sans-serif;
+  margin: 0;
+}
+
+.movie-container {
+  margin: 20px 0;
+}
+
+.movie-container select {
+  background-color: #fff;
+  border: 0;
+  border-radius: 5px;
+  font-size: 14px;
+  margin-left: 10px;
+  padding: 5px 15px 5px 15px;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.container {
+  perspective: 1000px;
+  margin-bottom: 30px;
+}
+
+.seat {
+  background-color: #444451;
+  height: 12px;
+  width: 15px;
+  margin: 3px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.seat.selected {
+  background-color: #6feaf6;
+}
+
+.seat.occupied {
+  background-color: #fff;
+}
+
+.seat:nth-of-type(2) {
+  margin-right: 18px;
+}
+
+.seat:nth-last-of-type(2) {
+  margin-left: 18px;
+}
+
+.seat:not(.occupied):hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+.showcase .seat:not(.occupied):hover {
+  cursor: default;
+  transform: scale(1);
+}
+
+.showcase {
+  background: rgba(0, 0, 0, 0.1);
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: #777;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+.showcase li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 10px;
+}
+
+.showcase li small {
+  margin-left: 2px;
+}
+
+.row {
+  display: flex;
+}
+
+.screen {
+  background-color: #fff;
+  height: 70px;
+  width: 100%;
+  margin: 15px 0;
+  transform: rotateX(-45deg);
+  box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
+}
+
+p.text {
+  margin: 5px 0;
+}
+
+p.text span {
+  color: #6feaf6;
+}
